<resources>
    <string name="app_name">Madarsoft Task</string>
    <string name="name">Name</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="show_user">Show User</string>
    <string name="name_">Name:</string>
    <string name="age_">Age:</string>
    <string name="gender_">Gender:</string>
    <string name="job_title_">Job TItle:</string>
</resources>